force-app/main/default/objects/ssot__CaseTeamMemberProgram__dlm/fields/ssot__CaseTeamMemberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseTeamMemberId__c</fullName>
    <label>Case Team Member</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseTeamMemberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>