force-app/main/default/objects/ssot__CaseTeamMemberProgram__dlm/fields/ssot__rel_1719819627425_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819627425_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseTeamMemberProgram_ProgramId_map__rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>CaseTeamMemberProgram_ProgramId_map__rel</relationshipLabel>
    <relationshipName>rel_1719819627425_end</relationshipName>
    <type>Lookup</type>
</CustomField>